# B-TCP

./: .gitignore  CMakeLists.txt  README.md  tun.sh
apps/: CMakeLists.txt  bidirectional_stream_copy.cpp  bidirectional_stream_copy.h  endtoend.cpp  webget.cpp
docs/: address_8h_source.html  annotated.html  b__epoll_8h_source.html  b__poll_8h_source.html  b__socket_8h_source.html  base__socket_8h_source.html  classAddress.html  classAddress_1_1Raw-members.html  classAddress_1_1Raw.html  classB__TCPSocketEpoll-members.html  classB__TCPSocketEpoll.html  classB__TCPSocketEpoll__coll__graph.map  classB__TCPSocketEpoll__coll__graph.md5  classB__TCPSocketEpoll__inherit__graph.md5  classB__epoll-members.html  classB__epoll.html  classBuffer-members.html  classEventEpoll.html  classEventEpoll__coll__graph.map  classEventEpoll__coll__graph.md5  classEventEpoll__inherit__graph.map  classEventEpoll__inherit__graph.md5  classEventLoop-members.html  classEventLoop.html  classFdAdapterConfig-members.html  classFdAdapterConfig.html  classFdAdapterConfig__coll__graph.md5  classFileDescriptor-members.html  classFileDescriptor.html  classFileDescriptor__inherit__graph.map  classFileDescriptor__inherit__graph.md5  classParser.html  classRawTCPSocket-members.html  classRawTCPSocket.html  classRawTCPSocket__coll__graph.map  classRawTCPSocket__coll__graph.md5  classReader.html  classReader__inherit__graph.map  classReassembler-members.html  classReassembler.html  (+159 more)
docs/html/: annotated.html  base__socket_8h_source.html  checksum_8h_source.html  classAddress-members.html  classAddress_1_1Raw.html  classB__TCPSocket-members.html  classB__TCPSocket.html  classB__TCPSocketEpoll-members.html  classB__TCPSocketEpoll__coll__graph.map  classB__TCPSocketEpoll__inherit__graph.map  classB__TCPSocket__coll__graph.map  classB__TCPSocket__coll__graph.md5  classB__TCPSocket__inherit__graph.map  classB__TCPSocket__inherit__graph.md5  classB__epoll.html  (+126 more)
etc/: cflags.cmake  tests.cmake
src/: CMakeLists.txt  byte_stream.cpp  byte_stream.h  byte_stream_helpers.cpp  network_interface.cpp  network_interface.h  reassembler.cpp  reassembler.h  router.cpp  router.h  tcp_receiver.cpp  tcp_receiver.h  tcp_sender.cpp  tcp_sender.h  timer.h  wrapping_integers.cpp  wrapping_integers.h
src/buffer/: CMakeLists.txt  stream_buffer.cpp
src/connect/: CMakeLists.txt  b_socket.cpp  base_socket.cpp  raw_tcpsocket.cpp  reassembler.cpp  transceiver.cpp
src/datagram/: CMakeLists.txt  address.cpp  file_descriptor.cpp  tcp_message.cpp  wrapping_integers.cpp
src/include/buffer/: stream_buffer.h  string_buffer.h
src/include/config/: tcp_config.h
src/include/connect/: b_socket.h  base_socket.h  raw_tcpsocket.h  reassembler.h  tcp_endpoint.h  transceiver.h
src/include/datagram/: checksum.h  file_descriptor.h  tcp_message.h  wrapping_integers.h
src/include/polling/: b_epoll.h  eventloop.h  eventpolling.h  rule.h
src/include/tun/: tun.h  tun_adapter.h
src/include/utils/: eventloop.h  parser.h  stream_copy.h
src/polling/: CMakeLists.txt  b_epoll.cpp  eventloop.cpp.txt  eventpolling.cpp  rule.cpp
src/tun/: CMakeLists.txt  tun.cpp  tun_adapter.cpp
src/utils/: CMakeLists.txt  eventloop.cpp  random.cpp  stream_copy.cpp
test/: CMakeLists.txt  byte_stream_test_harness.h  common.cpp  common.h  conversions.h  reassembler_dup.cpp  reassembler_test_harness.h
tools/: BTCP.cpp  BrowserSimulator.cpp  CMakeLists.txt  RawTCP.cpp  speed_test.cpp
utils/: CMakeLists.txt  address.cpp  address.h  arp_message.cpp  arp_message.h  buffer.h  checksum.h  ethernet_frame.h  ethernet_header.cpp  ethernet_header.h  eventloop.cpp  eventloop.h  exception.h  fd_adapter.h  file_descriptor.cpp  file_descriptor.h  ipv4_datagram.h  ipv4_header.cpp  ipv4_header.h  lossy_fd_adapter.h  parser.h  random.cpp  socket.cpp  socket.h  tcp_config.h  tcp_minnow_socket.cpp  tcp_minnow_socket.h  tcp_over_ip.cpp  tcp_over_ip.h  tcp_peer.h  tcp_receiver_message.h  tcp_segment.cpp  tcp_segment.h  tcp_sender_message.h  tun.cpp  tun.h  tuntap_adapter.cpp  tuntap_adapter.h  udinfo.h
(+76 files in other folders)
